CLI: add subcommand routing and --working-directory support; Docs: align README Quickstart and serve options; Build: remove unused picocli, add exec and JaCoCo plugins; I/O: write UTF-8 for generated files; Meta: use Implementation-Version in manifest